# florencia

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  florence_attractions.html  florence_reservations.html  pyproject.toml
.github/workflows/: lint.yml  test.yml
data/results/: florence_attractions.html
docs/: florence.html  index.html
florencia/: __init__.py  main.py
florencia/cli/: main.py  scrape.py
florencia/config/: config.yaml
florencia/core/: exceptions.py  logger.py  utils.py
florencia/core/config/: __init__.py  settings.py
florencia/data/: __init__.py  html_generator.py  scraper.py
florencia/ml/: __init__.py
florencia/schemas/: __init__.py  attraction.py
tests/: conftest.py  test_florencia_models.py
